fix keyboard accessibility for sliding door menu on mobile

--- a/web/themes/utmusic/components/02-molecules/sliding-door-menu/_sliding-item.scss
+++ b/web/themes/utmusic/components/02-molecules/sliding-door-menu/_sliding-item.scss
@@ -72,8 +72,16 @@
       }
     }
 
+    // we would like to have accessible (by keyboard) all other links when hide them for hover on current
     &.js-hidden {
-      display: none;
+      position: absolute !important;
+      clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+      clip: rect(1px, 1px, 1px, 1px);
+      padding: 0 !important;
+      border: 0 !important;
+      height: 1px !important;
+      width: 1px !important;
+      overflow: hidden;
     }
   }
 }
